--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
