--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-toastify": "^10.0.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
